--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -1,10 +1,6 @@
 name: linting, testing, building
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: 
-  push:
-    branches: [master]
-  pull_request:
-      branches: [master]
+on: [push]
 
 jobs:
   pipeline:
