--- a/package.json
+++ b/package.json
@@ -13,11 +13,7 @@
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
     "unit": "jest --config ./config/jest/jest.config.ts",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "test:ui": "npx loki test",  
-    "test:ui:ok":  "npx loki approve",
-    "test:ui:ci":  " loki --requireReference --reactUri file: ./storybook-static"
-    
+    "build-storybook": "storybook build"
   },
   "keywords": [],
   "author": "",
